--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="example">example <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div><div class="category" data-category="one">one <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="arrests">arrests <span class="quarto-category-count">(1)</span></div><div class="category" data-category="athletes">athletes <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="crime">crime <span class="quarto-category-count">(1)</span></div><div class="category" data-category="example">example <span class="quarto-category-count">(1)</span></div><div class="category" data-category="football">football <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div><div class="category" data-category="nfl">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="one">one <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -171,7 +171,54 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="news,code,analysis" data-listing-date-sort="1679374800000" data-listing-file-modified-sort="1679438599470" data-listing-reading-time-sort="0.045">
+<div class="quarto-post image-right" data-index="0" data-categories="nfl,arrests,crime,athletes,football" data-listing-date-sort="1681621200000" data-listing-file-modified-sort="1681668732330" data-listing-reading-time-sort="4.94">
+<div class="thumbnail">
+<p><a href="./posts/nfl-players-arrests-since-2000/index.html"> <img src="./posts/nfl-players-arrests-since-2000/DUI_BarChart.png" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/nfl-players-arrests-since-2000/index.html">
+<h3 class="no-anchor listing-title">
+How Often are NFL Players in Trouble with the Law?
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('nfl'); return false;">
+nfl
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('arrests'); return false;">
+arrests
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('crime'); return false;">
+crime
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('athletes'); return false;">
+athletes
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('football'); return false;">
+football
+</div>
+</div>
+<a href="./posts/nfl-players-arrests-since-2000/index.html">
+<div class="listing-description">
+The NFL does a lot to try to keep a good reputation, from following along with social media…
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/nfl-players-arrests-since-2000/index.html">
+<div class="listing-date">
+Apr 16, 2023
+</div>
+<div class="listing-author">
+Maja Tate
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="news,code,analysis" data-listing-date-sort="1679374800000" data-listing-file-modified-sort="1679438599470" data-listing-reading-time-sort="0.045">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html"> <img src="./posts/post-with-code/image.jpg" class="thumnail-image"> </a></p>
 </div>
@@ -212,7 +259,7 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="example,one" data-listing-date-sort="1679374800000" data-listing-file-modified-sort="1679440308510" data-listing-reading-time-sort="0.045">
+<div class="quarto-post image-right" data-index="2" data-categories="example,one" data-listing-date-sort="1679374800000" data-listing-file-modified-sort="1679440308510" data-listing-reading-time-sort="0.045">
 <div class="thumbnail">
 <a href="./posts/example-blog-post/index.html">
 <div class="thumbnail-image">
@@ -254,7 +301,7 @@ Maja Tate
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1679115600000" data-listing-file-modified-sort="1679438599468" data-listing-reading-time-sort="0.16">
+<div class="quarto-post image-right" data-index="3" data-categories="news" data-listing-date-sort="1679115600000" data-listing-file-modified-sort="1679438599468" data-listing-reading-time-sort="0.16">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html"> <img src="./posts/welcome/thumbnail.jpg" class="thumnail-image"> </a></p>
 </div>
